samples/_failures_safe/1761596725_9c50f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cc977d3.c: In function ‘main’:
./samples/SAFE/__tmp_6cc977d3.c:168:5: error: expected expression at end of input
  168 |     if (len > 0 && input[len-
      |     ^~
./samples/SAFE/__tmp_6cc977d3.c:168:5: error: expected declaration or statement at end of input
